--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ header-img: "universe.jpg"
 
     <p>学习之余，我还是一个公路自行车和马拉松爱好者。</p>
 
-    <p>这是我的利用 <a href="https://pages.github.com/">GitHub Pages</a> 与 <a href="http://jekyll.com.cn/">Jekyll</a> 搭建的 个人博客。<a href="https://github.com/AugustineTong">GitHub主页</a>如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的<a href="https://github.com/AugustineTong">GitHub主页</a>。如果有什么问题，欢迎提出探讨~</p>
 
     <p></p>
     
