--- a/about.html
+++ b/about.html
@@ -23,15 +23,13 @@ header-img: "universe.jpg"
 
     <p>学习之余，我还是一个公路自行车和马拉松爱好者。</p>
 
-    <p>这是我的<a href="https://github.com/AugustineTong">GitHub主页</a>。如果有什么问题，欢迎提出探讨~</p>
+    <p>这是我的<a href="https://github.com/AugustineTong">GitHub主页</a>。如果有什么问题，欢迎探讨~</p>
 
     <p></p>
     
     <h5>Talks</h5>
 
     <ul>
-        <li><a href="https://github.com">GitHub</a></li>
-        <li><a href="http://jekyll.com.cn/">jekyll</a></li> 
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
     </ul>
 </div>
