--- a/about.html
+++ b/about.html
@@ -17,9 +17,12 @@ header-img: "universe.jpg"
     <!--copied from markdown -->
     <blockquote><p>My heart is in the work.</p></blockquote>
 
-    <p>Hey，我是<strong>Augustine 童</strong>，一只分布式Golang程序猿，现为华中师范大学计算机研究生在读, 2020年毕业。</p>
+    <p>Hey，我是<strong>Augustine 童</strong><br>
+    一名分布式系统开发者<br>
+    大连理工大学自动化英语双学位本科<br>
+    伍伦贡大学计算机研究生在读，2020年毕业</p>
 
-    <p>正在找实习中，有意可以随时联系于邮箱 augustinetong@163.com </p>
+    <p>邮箱 augustinetong@163.com </p>
 
     <p>学习之余，我还是一个公路自行车和马拉松爱好者。</p>
 
