--- a/about.html
+++ b/about.html
@@ -22,15 +22,13 @@ header-img: "universe.jpg"
     大连理工大学自动化英语双学位本科<br>
     伍伦贡大学计算机研究生在读，2020年毕业</p>
 
-    <p>邮箱 augustinetong@163.com </p>
-
     <p>学习之余，我还是一个公路自行车和马拉松爱好者。</p>
 
-    <p>这是我的<a href="https://github.com/AugustineTong">GitHub主页</a>。如果有什么问题，欢迎探讨~</p>
+    <p>这是我的<a href="https://github.com/AugustineTong">GitHub主页</a></p>
 
-    <p></p>
+    <p>如果有什么问题，欢迎探讨，本人邮箱 augustinetong@163.com</p>
     
-    <h5>Talks</h5>
+    <h5>本网址点击率查询</h5>
 
     <ul>
         <li><a href="https://analytics.google.com/analytics">Google Analytics</a></li>
