--- a/about.html
+++ b/about.html
@@ -19,12 +19,12 @@ header-img: "universe.jpg"
 
     <p>Hey，我是<strong>Augu 童</strong><br>
     一名分布式系统开发者<br>
-    大连理工大学自动化英语双学位本科<br>
+    大连理工大学自动化-英语双学位本科<br>
     伍伦贡大学计算机研究生在读，2020年毕业</p>
 
-    <p>学习之余，我还是一个公路自行车和马拉松爱好者。</p>
-
     <p>这是我的<a href="https://github.com/AugustineTong">GitHub主页</a></p>
+
+    <p>学习之余，我还是一个公路自行车和马拉松爱好者。</p>
 
     <p>如果有什么问题，欢迎探讨，本人邮箱 augustinetong@163.com</p>
     
